--- a/vendor-panel/package.json
+++ b/vendor-panel/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "generate:static": "node ./scripts/generate-currencies.js && prettier --write ./src/lib/currencies.ts",
-    "wait": "node ./scripts/await-backend.js",
+    "wait": "node ./scripts/wait-for-backend.js",
     "dev": "pnpm run wait && node ./scripts/launch-vendor.js",
     "start": "pnpm run wait && node ./scripts/launch-vendor.js",
     "build": "vite build && tsup && node ./scripts/generate-types.js",
