Change init-algolia script command to use npm

--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,7 @@
     "build": "medusa build",
     "ib": "init-backend",
     "init-algolia": "node .medusa/server/src/scripts/init-algolia.js",
-    "start": "init-backend && pnpm run init-algolia && cd .medusa/server && medusa start",
+    "start": "init-backend && npm run init-algolia && cd .medusa/server && medusa start",
     "dev": "medusa develop",
     "seed": "medusa exec ./src/scripts/seed.ts",
     "test:integration:http": "TEST_TYPE=integration:http NODE_OPTIONS=--experimental-vm-modules jest --silent=false --runInBand --forceExit",
