Add @medusajs/draft-order dependency

--- a/backend/package.json
+++ b/backend/package.json
@@ -49,6 +49,7 @@
     "qrcode": "^1.5.4",
     "ulid": "^2.3.0",
     "zod": "^3.23.8"
+    "@medusajs/draft-order": "2.11.3"
   },
   "devDependencies": {
     "@medusajs/test-utils": "2.11.3",
