--- a/backend/package.json
+++ b/backend/package.json
@@ -24,23 +24,57 @@
     "test:unit": "TEST_TYPE=unit NODE_OPTIONS=--experimental-vm-modules jest --silent --runInBand --forceExit"
   },
   "dependencies": {
+{
+  "name": "medusa-starter-default",
+  "version": "0.0.1",
+  "description": "A starter for Medusa projects.",
+  "author": "Medusa (https://medusajs.com)",
+  "license": "MIT",
+  "keywords": [
+    "sqlite",
+    "postgres",
+    "typescript",
+    "ecommerce",
+    "headless",
+    "medusa"
+  ],
+  "engines": {
+    "node": ">=20"
+  },
+  "scripts": {
+    "build": "medusa build",
+    "dev": "medusa develop",
+    "start": "init-backend && npm run init-algolia && cd .medusa/server && medusa start",
+    "seed": "medusa exec ./src/scripts/seed.ts",
+    "init-algolia": "node .medusa/server/src/scripts/init-algolia.js",
+    "ib": "init-backend",
+    "test:integration:http": "TEST_TYPE=integration:http NODE_OPTIONS=--experimental-vm-modules jest --runInBand --forceExit",
+    "test:integration:modules": "TEST_TYPE=integration:modules NODE_OPTIONS=--experimental-vm-modules jest --runInBand --forceExit",
+    "test:unit": "TEST_TYPE=unit NODE_OPTIONS=--experimental-vm-modules jest --runInBand --forceExit"
+  },
+  "dependencies": {
     "@medusajs/admin-sdk": "2.11.3",
     "@medusajs/cli": "2.11.3",
     "@medusajs/core-flows": "2.11.3",
     "@medusajs/framework": "2.11.3",
     "@medusajs/medusa": "2.11.3",
-    "@mercurjs/algolia": "^1.4.3",
-    "@mercurjs/b2c-core": "^1.4.3",
-    "@mercurjs/commission": "^1.4.3",
+    "@medusajs/draft-order": "2.11.3",
+    "@medusajs/ui": "4.0.27",
+
     "@mercurjs/framework": "^1.4.3",
+    "@mercurjs/b2c-core": "^1.4.3",
+    "@mercurjs/algolia": "^1.4.3",
+    "@mercurjs/commission": "^1.4.3",
     "@mercurjs/payment-stripe-connect": "^1.4.3",
     "@mercurjs/requests": "^1.4.3",
     "@mercurjs/resend": "^1.4.3",
     "@mercurjs/reviews": "^1.4.3",
+
     "@mikro-orm/core": "6.4.3",
     "@mikro-orm/knex": "6.4.3",
     "@mikro-orm/migrations": "6.4.3",
     "@mikro-orm/postgresql": "6.4.3",
+
     "algoliasearch": "^5.44.0",
     "awilix": "^8.0.1",
     "medusajs-launch-utils": "^0.0.18",
@@ -48,8 +82,29 @@
     "pg": "^8.13.0",
     "qrcode": "^1.5.4",
     "ulid": "^2.3.0",
-    "zod": "^3.23.8",
-    "@medusajs/draft-order": "2.11.3"
+    "zod": "^3.23.8"
+  },
+  "devDependencies": {
+    "@medusajs/test-utils": "2.11.3",
+    "@mikro-orm/cli": "6.4.3",
+    "@swc/core": "1.15.7",
+    "@swc/jest": "^0.2.36",
+    "@types/jest": "^29.5.13",
+    "@types/node": "^20.0.0",
+    "@types/qrcode": "^1.5.5",
+    "@types/react": "^18.3.2",
+    "@types/react-dom": "^18.2.25",
+    "jest": "^29.7.0",
+    "prop-types": "^15.8.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.6.2",
+    "vite": "^5.2.11",
+    "yalc": "^1.0.0-pre.53"
+  }
+}
+
   },
   "devDependencies": {
     "@medusajs/test-utils": "2.11.3",
