--- a/backend/package.json
+++ b/backend/package.json
@@ -12,32 +12,6 @@
     "headless",
     "medusa"
   ],
-  "scripts": {
-    "build": "medusa build",
-    "ib": "init-backend",
-    "init-algolia": "node .medusa/server/src/scripts/init-algolia.js",
-    "start": "init-backend && npm run init-algolia && cd .medusa/server && medusa start",
-    "dev": "medusa develop",
-    "seed": "medusa exec ./src/scripts/seed.ts",
-    "test:integration:http": "TEST_TYPE=integration:http NODE_OPTIONS=--experimental-vm-modules jest --silent=false --runInBand --forceExit",
-    "test:integration:modules": "TEST_TYPE=integration:modules NODE_OPTIONS=--experimental-vm-modules jest --silent=false --runInBand --forceExit",
-    "test:unit": "TEST_TYPE=unit NODE_OPTIONS=--experimental-vm-modules jest --silent --runInBand --forceExit"
-  },
-  "dependencies": {
-{
-  "name": "medusa-starter-default",
-  "version": "0.0.1",
-  "description": "A starter for Medusa projects.",
-  "author": "Medusa (https://medusajs.com)",
-  "license": "MIT",
-  "keywords": [
-    "sqlite",
-    "postgres",
-    "typescript",
-    "ecommerce",
-    "headless",
-    "medusa"
-  ],
   "engines": {
     "node": ">=20"
   },
@@ -47,10 +21,7 @@
     "start": "init-backend && npm run init-algolia && cd .medusa/server && medusa start",
     "seed": "medusa exec ./src/scripts/seed.ts",
     "init-algolia": "node .medusa/server/src/scripts/init-algolia.js",
-    "ib": "init-backend",
-    "test:integration:http": "TEST_TYPE=integration:http NODE_OPTIONS=--experimental-vm-modules jest --runInBand --forceExit",
-    "test:integration:modules": "TEST_TYPE=integration:modules NODE_OPTIONS=--experimental-vm-modules jest --runInBand --forceExit",
-    "test:unit": "TEST_TYPE=unit NODE_OPTIONS=--experimental-vm-modules jest --runInBand --forceExit"
+    "ib": "init-backend"
   },
   "dependencies": {
     "@medusajs/admin-sdk": "2.11.3",
@@ -87,45 +58,9 @@
   "devDependencies": {
     "@medusajs/test-utils": "2.11.3",
     "@mikro-orm/cli": "6.4.3",
-    "@swc/core": "1.15.7",
-    "@swc/jest": "^0.2.36",
-    "@types/jest": "^29.5.13",
     "@types/node": "^20.0.0",
-    "@types/qrcode": "^1.5.5",
-    "@types/react": "^18.3.2",
-    "@types/react-dom": "^18.2.25",
-    "jest": "^29.7.0",
-    "prop-types": "^15.8.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "ts-node": "^10.9.2",
     "typescript": "^5.6.2",
-    "vite": "^5.2.11",
-    "yalc": "^1.0.0-pre.53"
-  }
-}
-
-  },
-  "devDependencies": {
-    "@medusajs/test-utils": "2.11.3",
-    "@mikro-orm/cli": "6.4.3",
-    "@swc/core": "1.15.7",
-    "@swc/jest": "^0.2.36",
-    "@types/jest": "^29.5.13",
-    "@types/node": "^20.0.0",
-    "@types/qrcode": "^1.5.5",
-    "@types/react": "^18.3.2",
-    "@types/react-dom": "^18.2.25",
-    "jest": "^29.7.0",
-    "prop-types": "^15.8.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.6.2",
-    "vite": "^5.2.11",
-    "yalc": "^1.0.0-pre.53"
-  },
-  "engines": {
-    "node": ">=20"
+    "jest": "^29.7.0"
   }
 }
