--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,7 @@
     "node": ">=20"
   },
   "scripts": {
-    "build": "medusa build",
+    "build": "init-backend",
     "dev": "medusa develop",
     "start": "init-backend && npm run init-algolia && cd .medusa/server && medusa start",
     "seed": "medusa exec ./src/scripts/seed.ts",
@@ -45,45 +45,4 @@
     "@mikro-orm/postgresql": "6.4.3",
     "algoliasearch": "^5.44.0",
     "awilix": "^8.0.1",
-    "medusajs-launch-utils": "^0.0.18",
-    "minio": "^8.0.3",
-    "pg": "^8.13.0",
-    "qrcode": "^1.5.4",
-    "ulid": "^2.3.0",
-    "zod": "^3.23.8"
-  },
-  "devDependencies": {
-    "@medusajs/test-utils": "2.11.3",
-    "@mikro-orm/cli": "6.4.3",
-    "@types/node": "^20.0.0",
-    "typescript": "^5.6.2",
-    "ts-node": "^10.9.2",
-    "jest": "^29.7.0"
-  },
-  "overrides": {
-    "@mercurjs/b2c-core": {
-      "@medusajs/ui": "4.0.27"
-    },
-    "@mercurjs/algolia": {
-      "@medusajs/ui": "4.0.27"
-    },
-    "@mercurjs/commission": {
-      "@medusajs/ui": "4.0.27"
-    },
-    "@mercurjs/payment-stripe-connect": {
-      "@medusajs/ui": "4.0.27"
-    },
-    "@mercurjs/requests": {
-      "@medusajs/ui": "4.0.27"
-    },
-    "@mercurjs/resend": {
-      "@medusajs/ui": "4.0.27"
-    },
-    "@mercurjs/reviews": {
-      "@medusajs/ui": "4.0.27"
-    },
-    "@mercurjs/framework": {
-      "@medusajs/ui": "4.0.27"
-    }
-  }
-}
+    "medusajs-launc
