--- a/backend/package.json
+++ b/backend/package.json
@@ -12,29 +12,26 @@
     "headless",
     "medusa"
   ],
-  "engines": {
-    "node": ">=20"
-  },
   "scripts": {
-    "build": "DATABASE_URL=postgresql://placeholder:placeholder@localhost:5432/placeholder medusa build",
-    "dev": "medusa develop",
-    "start": "init-backend && npm run init-algolia && cd .medusa/server && medusa start",
-    "seed": "medusa exec ./src/scripts/seed.ts",
+    "build": "medusa build",
+    "ib": "init-backend",
     "init-algolia": "node .medusa/server/src/scripts/init-algolia.js",
-    "ib": "init-backend"
+    "start": "init-backend && pnpm run init-algolia && cd .medusa/server && medusa start",
+    "dev": "medusa develop",
+    "seed": "medusa exec ./src/scripts/seed.ts",
+    "test:integration:http": "TEST_TYPE=integration:http NODE_OPTIONS=--experimental-vm-modules jest --silent=false --runInBand --forceExit",
+    "test:integration:modules": "TEST_TYPE=integration:modules NODE_OPTIONS=--experimental-vm-modules jest --silent=false --runInBand --forceExit",
+    "test:unit": "TEST_TYPE=unit NODE_OPTIONS=--experimental-vm-modules jest --silent --runInBand --forceExit"
   },
   "dependencies": {
-    "@medusajs/admin-sdk": "2.11.3",
-    "@medusajs/cli": "2.11.3",
-    "@medusajs/core-flows": "2.11.3",
-    "@medusajs/framework": "2.11.3",
-    "@medusajs/medusa": "2.11.3",
-    "@medusajs/draft-order": "2.11.3",
-    "@medusajs/ui": "4.0.27",
-    "@mercurjs/framework": "^1.4.3",
-    "@mercurjs/b2c-core": "^1.4.3",
+    "@medusajs/admin-sdk": "2.10.2",
+    "@medusajs/cli": "2.10.2",
+    "@medusajs/framework": "2.10.2",
+    "@medusajs/medusa": "2.10.2",
     "@mercurjs/algolia": "^1.4.3",
+    "@mercurjs/b2c-core": "^1.4.3",
     "@mercurjs/commission": "^1.4.3",
+    "@mercurjs/framework": "^1.4.3",
     "@mercurjs/payment-stripe-connect": "^1.4.3",
     "@mercurjs/requests": "^1.4.3",
     "@mercurjs/resend": "^1.4.3",
@@ -48,42 +45,27 @@
     "medusajs-launch-utils": "^0.0.18",
     "minio": "^8.0.3",
     "pg": "^8.13.0",
-    "qrcode": "^1.5.4",
-    "ulid": "^2.3.0",
-    "zod": "^3.23.8"
+    "ulid": "^2.3.0"
   },
   "devDependencies": {
-    "@medusajs/test-utils": "2.11.3",
+    "@medusajs/test-utils": "2.10.2",
     "@mikro-orm/cli": "6.4.3",
+    "@swc/core": "1.5.7",
+    "@swc/jest": "^0.2.36",
+    "@types/jest": "^29.5.13",
     "@types/node": "^20.0.0",
-    "typescript": "^5.6.2",
+    "@types/react": "^18.3.2",
+    "@types/react-dom": "^18.2.25",
+    "jest": "^29.7.0",
+    "prop-types": "^15.8.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "ts-node": "^10.9.2",
-    "jest": "^29.7.0"
+    "typescript": "^5.6.2",
+    "vite": "^5.2.11",
+    "yalc": "^1.0.0-pre.53"
   },
-  "overrides": {
-    "@mercurjs/b2c-core": {
-      "@medusajs/ui": "4.0.27"
-    },
-    "@mercurjs/algolia": {
-      "@medusajs/ui": "4.0.27"
-    },
-    "@mercurjs/commission": {
-      "@medusajs/ui": "4.0.27"
-    },
-    "@mercurjs/payment-stripe-connect": {
-      "@medusajs/ui": "4.0.27"
-    },
-    "@mercurjs/requests": {
-      "@medusajs/ui": "4.0.27"
-    },
-    "@mercurjs/resend": {
-      "@medusajs/ui": "4.0.27"
-    },
-    "@mercurjs/reviews": {
-      "@medusajs/ui": "4.0.27"
-    },
-    "@mercurjs/framework": {
-      "@medusajs/ui": "4.0.27"
-    }
+  "engines": {
+    "node": ">=20"
   }
 }
