--- a/backend/package.json
+++ b/backend/package.json
@@ -4,33 +4,86 @@
   "description": "A starter for Medusa projects.",
   "author": "Medusa (https://medusajs.com)",
   "license": "MIT",
-  "scripts": {
-    "build": "medusa build",
-    "start": "medusa start",
-    "dev": "medusa develop"
-  },
-"dependencies": {
-  "@medusajs/admin-sdk": "2.11.3",
-  "@medusajs/cli": "2.11.3",
-  "@medusajs/framework": "2.11.3",
-  "@medusajs/medusa": "2.11.3",
-
-  "@mercurjs/algolia": "^1.4.5",
-  "@mercurjs/b2c-core": "^1.4.3",
-  "@mercurjs/commission": "^1.4.3",
-  "@mercurjs/framework": "^1.4.3",
-  "@mercurjs/payment-stripe-connect": "^1.4.3",
-  "@mercurjs/requests": "^1.4.3",
-  "@mercurjs/resend": "^1.4.3",
-  "@mercurjs/reviews": "^1.4.3",
-
-  "@mikro-orm/core": "6.4.3",
-  "@mikro-orm/knex": "6.4.3",
-  "@mikro-orm/migrations": "6.4.3",
-  "@mikro-orm/postgresql": "6.4.3",
-  "pg": "^8.13.0"
-  },
+  "keywords": [
+    "sqlite",
+    "postgres",
+    "typescript",
+    "ecommerce",
+    "headless",
+    "medusa"
+  ],
   "engines": {
     "node": ">=20"
+  },
+  "scripts": {
+    "build": "DATABASE_URL=postgresql://placeholder:placeholder@localhost:5432/placeholder medusa build",
+    "dev": "medusa develop",
+    "start": "init-backend && npm run init-algolia && cd .medusa/server && medusa start",
+    "seed": "medusa exec ./src/scripts/seed.ts",
+    "init-algolia": "node .medusa/server/src/scripts/init-algolia.js",
+    "ib": "init-backend"
+  },
+  "dependencies": {
+    "@medusajs/admin-sdk": "2.11.3",
+    "@medusajs/cli": "2.11.3",
+    "@medusajs/core-flows": "2.11.3",
+    "@medusajs/framework": "2.11.3",
+    "@medusajs/medusa": "2.11.3",
+    "@medusajs/draft-order": "2.11.3",
+    "@medusajs/ui": "4.0.27",
+    "@mercurjs/framework": "^1.4.3",
+    "@mercurjs/b2c-core": "^1.4.3",
+    "@mercurjs/algolia": "^1.4.3",
+    "@mercurjs/commission": "^1.4.3",
+    "@mercurjs/payment-stripe-connect": "^1.4.3",
+    "@mercurjs/requests": "^1.4.3",
+    "@mercurjs/resend": "^1.4.3",
+    "@mercurjs/reviews": "^1.4.3",
+    "@mikro-orm/core": "6.4.3",
+    "@mikro-orm/knex": "6.4.3",
+    "@mikro-orm/migrations": "6.4.3",
+    "@mikro-orm/postgresql": "6.4.3",
+    "algoliasearch": "^5.44.0",
+    "awilix": "^8.0.1",
+    "medusajs-launch-utils": "^0.0.18",
+    "minio": "^8.0.3",
+    "pg": "^8.13.0",
+    "qrcode": "^1.5.4",
+    "ulid": "^2.3.0",
+    "zod": "^3.23.8",
+    "typescript": "^5.6.2",
+    "ts-node": "^10.9.2"
+  },
+  "devDependencies": {
+    "@medusajs/test-utils": "2.11.3",
+    "@mikro-orm/cli": "6.4.3",
+    "@types/node": "^20.0.0",
+    "jest": "^29.7.0"
+  },
+  "overrides": {
+    "@mercurjs/b2c-core": {
+      "@medusajs/ui": "4.0.27"
+    },
+    "@mercurjs/algolia": {
+      "@medusajs/ui": "4.0.27"
+    },
+    "@mercurjs/commission": {
+      "@medusajs/ui": "4.0.27"
+    },
+    "@mercurjs/payment-stripe-connect": {
+      "@medusajs/ui": "4.0.27"
+    },
+    "@mercurjs/requests": {
+      "@medusajs/ui": "4.0.27"
+    },
+    "@mercurjs/resend": {
+      "@medusajs/ui": "4.0.27"
+    },
+    "@mercurjs/reviews": {
+      "@medusajs/ui": "4.0.27"
+    },
+    "@mercurjs/framework": {
+      "@medusajs/ui": "4.0.27"
+    }
   }
 }
