--- a/backend/package.json
+++ b/backend/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "medusa-starter-default",
-  "version": "0.0.1",
-  "description": "A starter for Medusa projects.",
-  "author": "Medusa (https://medusajs.com)",
+  "name": "medusa-2.0-boilerplate-backend",
+  "version": "0.0.2",
+  "description": "A Prebaked Medusa 2.0 backend",
+  "author": "Rasmus Puls",
   "license": "MIT",
   "keywords": [
     "sqlite",
@@ -12,78 +12,53 @@
     "headless",
     "medusa"
   ],
-  "engines": {
-    "node": ">=20"
-  },
   "scripts": {
-    "build": "DATABASE_URL=postgresql://placeholder:placeholder@localhost:5432/placeholder medusa build",
-    "dev": "medusa develop",
-    "start": "init-backend && npm run init-algolia && cd .medusa/server && medusa start",
+    "build": "medusa build && node src/scripts/postBuild.js",
     "seed": "medusa exec ./src/scripts/seed.ts",
-    "init-algolia": "node .medusa/server/src/scripts/init-algolia.js",
-    "ib": "init-backend"
+    "ib": "init-backend",
+    "start": "init-backend && cd .medusa/server && medusa start --verbose",
+    "dev": "medusa develop",
+    "email:dev": "email dev --dir=./src/modules/email-notifications/templates --port=3002"
   },
   "dependencies": {
-    "@medusajs/admin-sdk": "2.11.3",
-    "@medusajs/cli": "2.11.3",
-    "@medusajs/core-flows": "2.11.3",
-    "@medusajs/framework": "2.11.3",
-    "@medusajs/medusa": "2.11.3",
-    "@medusajs/draft-order": "2.11.3",
-    "@medusajs/ui": "4.0.27",
-    "@mercurjs/framework": "^1.4.3",
-    "@mercurjs/b2c-core": "^1.4.3",
-    "@mercurjs/algolia": "^1.4.3",
-    "@mercurjs/commission": "^1.4.3",
-    "@mercurjs/payment-stripe-connect": "^1.4.3",
-    "@mercurjs/requests": "^1.4.3",
-    "@mercurjs/resend": "^1.4.3",
-    "@mercurjs/reviews": "^1.4.3",
-    "@mikro-orm/core": "6.4.3",
-    "@mikro-orm/knex": "6.4.3",
-    "@mikro-orm/migrations": "6.4.3",
-    "@mikro-orm/postgresql": "6.4.3",
-    "algoliasearch": "^5.44.0",
-    "awilix": "^8.0.1",
-    "medusajs-launch-utils": "^0.0.18",
-    "minio": "^8.0.3",
-    "pg": "^8.13.0",
-    "qrcode": "^1.5.4",
-    "ulid": "^2.3.0",
-    "zod": "^3.23.8",
-    "typescript": "^5.6.2",
-    "ts-node": "^10.9.2"
+    "@medusajs/admin-sdk": "2.12.1",
+    "@medusajs/admin-shared": "2.12.1",
+    "@medusajs/cli": "2.12.1",
+    "@medusajs/dashboard": "2.12.1",
+    "@medusajs/draft-order": "2.12.1",
+    "@medusajs/framework": "2.12.1",
+    "@medusajs/medusa": "2.12.1",
+    "@medusajs/notification-sendgrid": "2.12.1",
+    "@medusajs/payment-stripe": "2.12.1",
+    "@medusajs/workflow-engine-redis": "2.12.1",
+    "@react-email/components": "^1.0.1",
+    "@rokmohar/medusa-plugin-meilisearch": "1.3.5",
+    "medusajs-launch-utils": "0.0.18",
+    "minio": "^8.0.6",
+    "resend": "4.0.1",
+    "ulid": "^2.4.0"
   },
   "devDependencies": {
-    "@medusajs/test-utils": "2.11.3",
-    "@mikro-orm/cli": "6.4.3",
-    "@types/node": "^20.0.0",
-    "jest": "^29.7.0"
+    "@medusajs/test-utils": "2.12.1",
+    "@react-email/preview-server": "^5.1.0",
+    "@swc/core": "1.5.7",
+    "@swc/jest": "^0.2.39",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^20.19.25",
+    "@types/react": "^18.3.27",
+    "@types/react-dom": "^18.3.7",
+    "jest": "^29.7.0",
+    "prop-types": "^15.8.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-email": "^5.1.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.3",
+    "vite": "^5.4.21"
   },
-  "overrides": {
-    "@mercurjs/b2c-core": {
-      "@medusajs/ui": "4.0.27"
-    },
-    "@mercurjs/algolia": {
-      "@medusajs/ui": "4.0.27"
-    },
-    "@mercurjs/commission": {
-      "@medusajs/ui": "4.0.27"
-    },
-    "@mercurjs/payment-stripe-connect": {
-      "@medusajs/ui": "4.0.27"
-    },
-    "@mercurjs/requests": {
-      "@medusajs/ui": "4.0.27"
-    },
-    "@mercurjs/resend": {
-      "@medusajs/ui": "4.0.27"
-    },
-    "@mercurjs/reviews": {
-      "@medusajs/ui": "4.0.27"
-    },
-    "@mercurjs/framework": {
-      "@medusajs/ui": "4.0.27"
-    }
+  "packageManager": "pnpm@9.10.0",
+  "engines": {
+    "node": "22.x",
+    "npm": "10.x"
   }
 }
