--- a/backend/package.json
+++ b/backend/package.json
@@ -1,64 +1,77 @@
+
 {
-  "name": "medusa-2.0-boilerplate-backend",
-  "version": "0.0.2",
-  "description": "BMC",
-  "author": "Marlon Roerson",
-  "license": "MIT",
-  "keywords": [
-    "sqlite",
-    "postgres",
-    "typescript",
-    "ecommerce",
-    "headless",
-    "medusa"
-  ],
+  "name": "b2c-storefront",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "build": "medusa build && node src/scripts/postBuild.js",
-    "seed": "medusa exec ./src/scripts/seed.ts",
-    "ib": "init-backend",
-    "start": "init-backend && cd .medusa/server && medusa start --verbose",
-    "dev": "medusa develop",
-    "email:dev": "email dev --dir=./src/modules/email-notifications/templates --port=3002"
+    "wait": "await-backend",
+    "launcher": "launch-storefront",
+    "dev": "pnpm run wait && pnpm run launcher dev",
+    "build": "pnpm run wait && pnpm run launcher build",
+    "start": "pnpm run launcher start",
+    "lint": "next lint"
+  },
+  "resolutions": {
+    "glob": ">=10.5.0"
   },
   "dependencies": {
-    "@medusajs/admin-sdk": "2.12.1",
-    "@medusajs/admin-shared": "2.12.1",
-    "@medusajs/cli": "2.12.1",
-    "@medusajs/dashboard": "2.12.1",
-    "@medusajs/draft-order": "2.12.1",
-    "@medusajs/framework": "2.12.1",
-    "@medusajs/medusa": "2.12.1",
-    "@medusajs/notification-sendgrid": "2.12.1",
-    "@medusajs/payment-stripe": "2.12.1",
-    "@medusajs/workflow-engine-redis": "2.12.1",
-    "@react-email/components": "^1.0.1",
-    "@rokmohar/medusa-plugin-meilisearch": "1.3.5",
-    "medusajs-launch-utils": "0.0.18",
-    "minio": "^8.0.6",
-    "resend": "4.0.1",
-    "ulid": "^2.4.0"
+    "@headlessui/react": "^2.2.1",
+    "@hookform/resolvers": "^3.10.0",
+    "@medusajs/js-sdk": "^2.2.0",
+    "@medusajs/ui": "^4.0.7",
+    "@stripe/react-stripe-js": "^3.7.0",
+    "@stripe/stripe-js": "^7.1.0",
+    "@talkjs/react": "^0.1.11",
+    "@types/js-cookie": "^3.0.6",
+    "algoliasearch": "^5.20.3",
+    "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
+    "embla-carousel-react": "^8.5.2",
+    "i18next": "^25.2.1",
+    "i18next-browser-languagedetector": "^8.1.0",
+    "js-cookie": "^3.0.5",
+    "lodash": "^4.17.21",
+    "medusajs-launch-utils": "^0.0.18",
+    "next": "^15.1.6",
+    "next-intl": "^3.26.3",
+    "react": "^19.0.0",
+    "react-country-flag": "^3.1.0",
+    "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
+    "react-i18next": "^15.5.2",
+    "react-instantsearch": "^7.15.3",
+    "react-instantsearch-nextjs": "^0.4.4",
+    "tailwind-merge": "^2.6.0",
+    "talkjs": "^0.37.0",
+    "uuid": "^11.0.5",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
-    "@medusajs/test-utils": "2.12.1",
-    "@react-email/preview-server": "^5.1.0",
-    "@swc/core": "1.5.7",
-    "@swc/jest": "^0.2.39",
-    "@types/jest": "^29.5.14",
-    "@types/node": "^20.19.25",
-    "@types/react": "^18.3.27",
-    "@types/react-dom": "^18.3.7",
-    "jest": "^29.7.0",
-    "prop-types": "^15.8.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-email": "^5.1.0",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.9.3",
-    "vite": "^5.4.21"
+    "@chromatic-com/storybook": "^3.2.3",
+    "@eslint/eslintrc": "^3",
+    "@storybook/addon-essentials": "^8.4.7",
+    "@storybook/addon-interactions": "^8.4.7",
+    "@storybook/addon-onboarding": "^8.4.7",
+    "@storybook/blocks": "^8.4.7",
+    "@storybook/nextjs": "^8.4.7",
+    "@storybook/react": "^8.4.7",
+    "@storybook/test": "^8.4.7",
+    "@types/lodash": "^4.17.15",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "eslint": "^9",
+    "eslint-config-next": "15.1.4",
+    "eslint-plugin-storybook": "^0.11.2",
+    "postcss": "^8",
+    "storybook": "^8.4.7",
+    "storybook-next-intl": "^1.2.4",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   },
-  "packageManager": "pnpm@9.10.0",
-  "engines": {
-    "node": "22.x",
-    "npm": "10.x"
+  "eslintConfig": {
+    "extends": [
+      "plugin:storybook/recommended"
+    ]
   }
 }
