--- a/backend/package.json
+++ b/backend/package.json
@@ -1,77 +1,71 @@
-
 {
-  "name": "b2c-storefront",
-  "version": "0.1.0",
-  "private": true,
+  "name": "medusa-starter-default",
+  "version": "0.0.1",
+  "description": "A starter for Medusa projects.",
+  "author": "Medusa (https://medusajs.com)",
+  "license": "MIT",
+  "keywords": [
+    "sqlite",
+    "postgres",
+    "typescript",
+    "ecommerce",
+    "headless",
+    "medusa"
+  ],
   "scripts": {
-    "wait": "await-backend",
-    "launcher": "launch-storefront",
-    "dev": "pnpm run wait && pnpm run launcher dev",
-    "build": "pnpm run launcher build",
-    "start": "pnpm run launcher start",
-    "lint": "next lint"
-  },
-  "resolutions": {
-    "glob": ">=10.5.0"
+    "build": "medusa build",
+    "ib": "init-backend",
+    "init-algolia": "node .medusa/server/src/scripts/init-algolia.js",
+    "start": "init-backend && pnpm run init-algolia && cd .medusa/server && medusa start",
+    "dev": "medusa develop",
+    "seed": "medusa exec ./src/scripts/seed.ts",
+    "test:integration:http": "TEST_TYPE=integration:http NODE_OPTIONS=--experimental-vm-modules jest --silent=false --runInBand --forceExit",
+    "test:integration:modules": "TEST_TYPE=integration:modules NODE_OPTIONS=--experimental-vm-modules jest --silent=false --runInBand --forceExit",
+    "test:unit": "TEST_TYPE=unit NODE_OPTIONS=--experimental-vm-modules jest --silent --runInBand --forceExit"
   },
   "dependencies": {
-    "@headlessui/react": "^2.2.1",
-    "@hookform/resolvers": "^3.10.0",
-    "@medusajs/js-sdk": "^2.2.0",
-    "@medusajs/ui": "^4.0.7",
-    "@stripe/react-stripe-js": "^3.7.0",
-    "@stripe/stripe-js": "^7.1.0",
-    "@talkjs/react": "^0.1.11",
-    "@types/js-cookie": "^3.0.6",
-    "algoliasearch": "^5.20.3",
-    "clsx": "^2.1.1",
-    "date-fns": "^4.1.0",
-    "embla-carousel-react": "^8.5.2",
-    "i18next": "^25.2.1",
-    "i18next-browser-languagedetector": "^8.1.0",
-    "js-cookie": "^3.0.5",
-    "lodash": "^4.17.21",
+    "@medusajs/admin-sdk": "2.10.2",
+    "@medusajs/cli": "2.10.2",
+    "@medusajs/framework": "2.10.2",
+    "@medusajs/medusa": "2.10.2",
+    "@mercurjs/algolia": "^1.4.3",
+    "@mercurjs/b2c-core": "^1.4.3",
+    "@mercurjs/commission": "^1.4.3",
+    "@mercurjs/framework": "^1.4.3",
+    "@mercurjs/payment-stripe-connect": "^1.4.3",
+    "@mercurjs/requests": "^1.4.3",
+    "@mercurjs/resend": "^1.4.3",
+    "@mercurjs/reviews": "^1.4.3",
+    "@mikro-orm/core": "6.4.3",
+    "@mikro-orm/knex": "6.4.3",
+    "@mikro-orm/migrations": "6.4.3",
+    "@mikro-orm/postgresql": "6.4.3",
+    "algoliasearch": "^5.44.0",
+    "awilix": "^8.0.1",
     "medusajs-launch-utils": "^0.0.18",
-    "next": "^15.1.6",
-    "next-intl": "^3.26.3",
-    "react": "^19.0.0",
-    "react-country-flag": "^3.1.0",
-    "react-dom": "^19.0.0",
-    "react-hook-form": "^7.54.2",
-    "react-i18next": "^15.5.2",
-    "react-instantsearch": "^7.15.3",
-    "react-instantsearch-nextjs": "^0.4.4",
-    "tailwind-merge": "^2.6.0",
-    "talkjs": "^0.37.0",
-    "uuid": "^11.0.5",
-    "zod": "^3.24.1"
+    "minio": "^8.0.3",
+    "pg": "^8.13.0",
+    "ulid": "^2.3.0"
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "^3.2.3",
-    "@eslint/eslintrc": "^3",
-    "@storybook/addon-essentials": "^8.4.7",
-    "@storybook/addon-interactions": "^8.4.7",
-    "@storybook/addon-onboarding": "^8.4.7",
-    "@storybook/blocks": "^8.4.7",
-    "@storybook/nextjs": "^8.4.7",
-    "@storybook/react": "^8.4.7",
-    "@storybook/test": "^8.4.7",
-    "@types/lodash": "^4.17.15",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.4",
-    "eslint-plugin-storybook": "^0.11.2",
-    "postcss": "^8",
-    "storybook": "^8.4.7",
-    "storybook-next-intl": "^1.2.4",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "@medusajs/test-utils": "2.10.2",
+    "@mikro-orm/cli": "6.4.3",
+    "@swc/core": "1.5.7",
+    "@swc/jest": "^0.2.36",
+    "@types/jest": "^29.5.13",
+    "@types/node": "^20.0.0",
+    "@types/react": "^18.3.2",
+    "@types/react-dom": "^18.2.25",
+    "jest": "^29.7.0",
+    "prop-types": "^15.8.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.6.2",
+    "vite": "^5.2.11",
+    "yalc": "^1.0.0-pre.53"
   },
-  "eslintConfig": {
-    "extends": [
-      "plugin:storybook/recommended"
-    ]
+  "engines": {
+    "node": ">=20"
   }
 }
