--- a/backend/package.json
+++ b/backend/package.json
@@ -37,14 +37,13 @@
     "@mercurjs/requests": "^1.4.3",
     "@mercurjs/resend": "^1.4.3",
     "@mercurjs/reviews": "^1.4.3",
-    "@mikro-orm/core": "6.4.3",
     "@mikro-orm/knex": "6.4.3",
-    "@mikro-orm/migrations": "6.4.3",
     "@mikro-orm/postgresql": "6.4.3",
     "algoliasearch": "^5.44.0",
     "awilix": "^8.0.1",
     "medusajs-launch-utils": "^0.0.18",
     "minio": "^8.0.3",
+    "multer": "^2.0.2",
     "pg": "^8.13.0",
     "qrcode": "^1.5.4",
     "ulid": "^2.3.0",
@@ -53,9 +52,12 @@
   "devDependencies": {
     "@medusajs/test-utils": "2.10.2",
     "@mikro-orm/cli": "6.4.3",
+    "@mikro-orm/core": "6.4.3",
+    "@mikro-orm/migrations": "6.4.3",
     "@swc/core": "1.5.7",
     "@swc/jest": "^0.2.36",
     "@types/jest": "^29.5.13",
+    "@types/multer": "^2.0.0",
     "@types/node": "^20.0.0",
     "@types/qrcode": "^1.5.6",
     "@types/react": "^18.3.2",
