update dependencies for backend

--- a/backend/package.json
+++ b/backend/package.json
@@ -27,8 +27,10 @@
     "@medusajs/admin-sdk": "2.10.2",
     "@medusajs/cli": "2.10.2",
     "@medusajs/core-flows": "^2.12.3",
-    "@medusajs/framework": "2.10.2",
-    "@medusajs/medusa": "2.10.2",
+    "@medusajs/framework": "2.12.3",
+    "@medusajs/icons": "2.11.3",
+    "@medusajs/medusa": "2.12.3",
+    "@medusajs/ui": "4.0.25",
     "@mercurjs/algolia": "^1.4.3",
     "@mercurjs/b2c-core": "^1.4.3",
     "@mercurjs/commission": "^1.4.3",
