--- a/backend/package.json
+++ b/backend/package.json
@@ -24,21 +24,25 @@
     "test:unit": "TEST_TYPE=unit NODE_OPTIONS=--experimental-vm-modules jest --silent --runInBand --forceExit"
   },
   "dependencies": {
+    "@medusajs/admin-bundler": "2.12.3",
     "@medusajs/admin-sdk": "2.12.3",
+    "@medusajs/admin-vite-plugin": "2.12.3",
+    "@medusajs/analytics-posthog": "2.12.3",
     "@medusajs/cli": "2.12.3",
     "@medusajs/core-flows": "^2.12.3",
+    "@medusajs/file-s3": "2.12.3",
     "@medusajs/framework": "2.12.3",
     "@medusajs/icons": "2.12.3",
     "@medusajs/medusa": "2.12.3",
     "@medusajs/ui": "4.0.31",
-    "@mercurjs/algolia": "^1.4.3",
-    "@mercurjs/b2c-core": "^1.4.3",
-    "@mercurjs/commission": "^1.4.3",
-    "@mercurjs/framework": "^1.4.3",
-    "@mercurjs/payment-stripe-connect": "^1.4.3",
-    "@mercurjs/requests": "^1.4.3",
-    "@mercurjs/resend": "^1.4.3",
-    "@mercurjs/reviews": "^1.4.3",
+    "@mercurjs/algolia": "1.4.5",
+    "@mercurjs/b2c-core": "1.4.5",
+    "@mercurjs/commission": "1.4.5",
+    "@mercurjs/framework": "1.4.5",
+    "@mercurjs/payment-stripe-connect": "1.4.5",
+    "@mercurjs/requests": "1.4.5",
+    "@mercurjs/resend": "1.4.5",
+    "@mercurjs/reviews": "1.4.5",
     "@mikro-orm/knex": "6.4.16",
     "@mikro-orm/postgresql": "6.4.3",
     "algoliasearch": "^5.44.0",
