--- a/backend/package.json
+++ b/backend/package.json
@@ -13,89 +13,59 @@
     "medusa"
   ],
   "scripts": {
-    "clean": "cross-env ./node_modules/.bin/rimraf dist",
-    "build": "cross-env npm run clean && npm run build:server && npm run build:admin",
-    "build:server": "cross-env npm run clean && tsc -p tsconfig.server.json",
-    "build:admin": "cross-env medusa-admin build",
-    "watch": "cross-env tsc --watch",
-    "test": "cross-env jest",
-    "seed": "cross-env medusa seed -f ./data/seed.json",
-    "seed:once": "node script/seedOnce.js",
-    "start": "cross-env npm run build && medusa start",
-    "start:custom": "cross-env npm run build && node --preserve-symlinks --trace-warnings index.js",
-    "dev": "cross-env npm run build:server && medusa develop"
+    "build": "medusa build",
+    "ib": "init-backend",
+    "init-algolia": "node .medusa/server/src/scripts/init-algolia.js",
+    "start": "init-backend && pnpm run init-algolia && cd .medusa/server && medusa start",
+    "dev": "medusa develop",
+    "seed": "medusa exec ./src/scripts/seed.ts",
+    "test:integration:http": "TEST_TYPE=integration:http NODE_OPTIONS=--experimental-vm-modules jest --silent=false --runInBand --forceExit",
+    "test:integration:modules": "TEST_TYPE=integration:modules NODE_OPTIONS=--experimental-vm-modules jest --silent=false --runInBand --forceExit",
+    "test:unit": "TEST_TYPE=unit NODE_OPTIONS=--experimental-vm-modules jest --silent --runInBand --forceExit"
   },
   "dependencies": {
-    "@medusajs/admin": "^7.1.15",
-    "@medusajs/cache-inmemory": "^1.8.11",
-    "@medusajs/cache-redis": "^1.9.2",
-    "@medusajs/event-bus-local": "^1.9.9",
-    "@medusajs/event-bus-redis": "^1.8.14",
-    "@medusajs/file-local": "^1.0.4",
-    "@medusajs/medusa": "^1.20.8",
-    "@tanstack/react-query": "5.51.11",
-    "ajv": "^8.17.1",
-    "body-parser": "^1.20.2",
-    "cors": "^2.8.5",
-    "dotenv": "16.4.5",
-    "express": "^4.19.2",
-    "medusa-file-cloudinary": "^1.0.2",
-    "medusa-fulfillment-manual": "^1.1.41",
-    "medusa-interfaces": "^1.3.10",
-    "medusa-payment-manual": "^1.0.25",
-    "medusa-payment-stripe": "^6.0.10",
-    "prism-react-renderer": "^2.3.1",
-    "typeorm": "^0.3.20"
+    "@medusajs/admin-sdk": "2.10.2",
+    "@medusajs/cli": "2.10.2",
+    "@medusajs/framework": "2.10.2",
+    "@medusajs/medusa": "2.10.2",
+    "@mercurjs/algolia": "^1.4.3",
+    "@mercurjs/b2c-core": "^1.4.3",
+    "@mercurjs/commission": "^1.4.3",
+    "@mercurjs/framework": "^1.4.3",
+    "@mercurjs/payment-stripe-connect": "^1.4.3",
+    "@mercurjs/requests": "^1.4.3",
+    "@mercurjs/resend": "^1.4.3",
+    "@mercurjs/reviews": "^1.4.3",
+    "@mikro-orm/core": "6.4.3",
+    "@mikro-orm/knex": "6.4.3",
+    "@mikro-orm/migrations": "6.4.3",
+    "@mikro-orm/postgresql": "6.4.3",
+    "algoliasearch": "^5.44.0",
+    "awilix": "^8.0.1",
+    "medusajs-launch-utils": "^0.0.18",
+    "minio": "^8.0.3",
+    "pg": "^8.13.0",
+    "ulid": "^2.3.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.24.8",
-    "@babel/core": "^7.24.9",
-    "@babel/preset-typescript": "^7.24.7",
-    "@medusajs/medusa-cli": "^1.3.23",
-    "@types/express": "^4.17.21",
-    "@types/jest": "^29.5.12",
-    "@types/node": "^20.14.12",
-    "babel-preset-medusa-package": "^1.1.19",
-    "cross-env": "^7.0.3",
-    "eslint": "^9.7.0",
+    "@medusajs/test-utils": "2.10.2",
+    "@mikro-orm/cli": "6.4.3",
+    "@swc/core": "1.5.7",
+    "@swc/jest": "^0.2.36",
+    "@types/jest": "^29.5.13",
+    "@types/node": "^20.0.0",
+    "@types/react": "^18.3.2",
+    "@types/react-dom": "^18.2.25",
     "jest": "^29.7.0",
-    "rimraf": "^6.0.1",
-    "ts-jest": "^29.2.3",
-    "ts-loader": "^9.5.1",
-    "typescript": "^5.5.4"
+    "prop-types": "^15.8.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.6.2",
+    "vite": "^5.2.11",
+    "yalc": "^1.0.0-pre.53"
   },
-  "jest": {
-    "globals": {
-      "ts-jest": {
-        "tsconfig": "tsconfig.spec.json"
-      }
-    },
-    "moduleFileExtensions": [
-      "js",
-      "json",
-      "ts"
-    ],
-    "testPathIgnorePatterns": [
-      "/node_modules/",
-      "<rootDir>/node_modules/"
-    ],
-    "rootDir": "src",
-    "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|js)$",
-    "transform": {
-      ".ts": "ts-jest"
-    },
-    "collectCoverageFrom": [
-      "**/*.(t|j)s"
-    ],
-    "coverageDirectory": "./coverage",
-    "testEnvironment": "node"
-  },
-  "overrides": {
-    "@medusajs/admin-ui": {
-      "@medusajs/ui-preset": "^1.1.2"
-    }
-  },
-  "resolutions": {
-    "@medusajs/ui-preset": "^1.1.2"
+  "engines": {
+    "node": ">=20"
   }
 }
