--- a/backend/package.json
+++ b/backend/package.json
@@ -26,9 +26,11 @@
   "dependencies": {
     "@medusajs/admin-sdk": "2.10.2",
     "@medusajs/cli": "2.10.2",
+    "@medusajs/core-flows": "^2.12.3",
     "@medusajs/framework": "2.10.2",
     "@medusajs/medusa": "2.10.2",
     "@medusajs/ui": "4.0.25",
+    "@medusajs/utils": "^2.12.3",
     "@mercurjs/algolia": "^1.4.3",
     "@mercurjs/b2c-core": "^1.4.3",
     "@mercurjs/commission": "^1.4.3",
@@ -43,6 +45,7 @@
     "@mikro-orm/postgresql": "6.4.3",
     "algoliasearch": "^5.44.0",
     "awilix": "^8.0.1",
+    "express": "^5.2.1",
     "medusajs-launch-utils": "^0.0.18",
     "minio": "^8.0.3",
     "multer": "^2.0.2",
@@ -58,6 +61,7 @@
     "@mikro-orm/cli": "6.4.3",
     "@swc/core": "1.5.7",
     "@swc/jest": "^0.2.36",
+    "@types/express": "^5.0.6",
     "@types/jest": "^29.5.13",
     "@types/multer": "^2.0.0",
     "@types/node": "^20.0.0",
