--- a/backend/package.json
+++ b/backend/package.json
@@ -24,28 +24,29 @@
     "test:unit": "TEST_TYPE=unit NODE_OPTIONS=--experimental-vm-modules jest --silent --runInBand --forceExit"
   },
   "dependencies": {
-    "@medusajs/admin-sdk": "2.10.2",
-    "@medusajs/cli": "2.10.2",
-    "@medusajs/core-flows": "^2.12.3",
-    "@medusajs/framework": "2.10.2",
-    "@medusajs/medusa": "2.10.2",
-    "@medusajs/ui": "4.0.25",
-    "@medusajs/utils": "^2.12.3",
-    "@mercurjs/algolia": "^1.4.3",
-    "@mercurjs/b2c-core": "^1.4.3",
-    "@mercurjs/commission": "^1.4.3",
-    "@mercurjs/framework": "^1.4.3",
-    "@mercurjs/payment-stripe-connect": "^1.4.3",
-    "@mercurjs/requests": "^1.4.3",
-    "@mercurjs/resend": "^1.4.3",
-    "@mercurjs/reviews": "^1.4.3",
+    "@medusajs/admin-sdk": "2.11.3",
+    "@medusajs/cli": "2.11.3",
+    "@medusajs/core-flows": "^2.11.3",
+    "@medusajs/framework": "2.11.3",
+    "@medusajs/icons": "2.11.3",
+    "@medusajs/medusa": "2.11.3",
+    "@medusajs/ui": "4.0.27",
+    "@medusajs/utils": "^2.11.3",
+    "@mercurjs/algolia": "^1.4.5",
+    "@mercurjs/b2c-core": "^1.4.5",
+    "@mercurjs/commission": "^1.4.5",
+    "@mercurjs/framework": "^1.4.5",
+    "@mercurjs/payment-stripe-connect": "^1.4.5",
+    "@mercurjs/requests": "^1.4.5",
+    "@mercurjs/resend": "^1.4.5",
+    "@mercurjs/reviews": "^1.4.5",
     "@mikro-orm/core": "6.4.3",
     "@mikro-orm/knex": "6.4.3",
     "@mikro-orm/migrations": "6.4.3",
     "@mikro-orm/postgresql": "6.4.3",
     "algoliasearch": "^5.44.0",
     "awilix": "^8.0.1",
-    "express": "^5.2.1",
+    "express": "^4.21.2",
     "medusajs-launch-utils": "^0.0.18",
     "minio": "^8.0.3",
     "multer": "^2.0.2",
@@ -57,9 +58,9 @@
   },
   "devDependencies": {
     "@graphql-codegen/visitor-plugin-common": "^6.2.2",
-    "@medusajs/test-utils": "2.10.2",
+    "@medusajs/test-utils": "2.11.3",
     "@mikro-orm/cli": "6.4.3",
-    "@swc/core": "1.5.7",
+    "@swc/core": "1.15.7",
     "@swc/jest": "^0.2.36",
     "@types/express": "^5.0.6",
     "@types/jest": "^29.5.13",
