updaet plugin ticket booking

--- a/ticket-booking/package.json
+++ b/ticket-booking/package.json
@@ -33,13 +33,13 @@
     "prepublishOnly": "medusa plugin:build"
   },
   "devDependencies": {
-    "@medusajs/admin-sdk": "2.12.3",
-    "@medusajs/cli": "2.12.3",
-    "@medusajs/framework": "2.12.3",
-    "@medusajs/icons": "2.12.3",
-    "@medusajs/medusa": "2.12.3",
-    "@medusajs/test-utils": "2.12.3",
-    "@medusajs/ui": "^4.0.31",
+    "@medusajs/admin-sdk": "2.11.3",
+    "@medusajs/cli": "2.11.3",
+    "@medusajs/framework": "2.11.3",
+    "@medusajs/icons": "2.11.3",
+    "@medusajs/medusa": "2.11.3",
+    "@medusajs/test-utils": "2.11.3",
+    "@medusajs/ui": "4.0.27",
     "@swc/core": "^1.7.28",
     "@types/node": "^20.0.0",
     "@types/qrcode": "^1.5.6",
@@ -54,13 +54,13 @@
     "yalc": "^1.0.0-pre.53"
   },
   "peerDependencies": {
-    "@medusajs/admin-sdk": "2.12.3",
-    "@medusajs/cli": "2.12.3",
-    "@medusajs/framework": "2.12.3",
-    "@medusajs/icons": "2.12.3",
-    "@medusajs/medusa": "2.12.3",
-    "@medusajs/test-utils": "2.12.3",
-    "@medusajs/ui": "^4.0.31"
+    "@medusajs/admin-sdk": "2.11.3",
+    "@medusajs/cli": "2.11.3",
+    "@medusajs/framework": "2.11.3",
+    "@medusajs/icons": "2.11.3",
+    "@medusajs/medusa": "2.11.3",
+    "@medusajs/test-utils": "2.11.3",
+    "@medusajs/ui": "4.0.27"
   },
   "engines": {
     "node": ">=20"
