--- a/backend/restaurant-marketplace/package.json
+++ b/backend/restaurant-marketplace/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "medusa-starter-default",
+  "name": "Food-aid-marketplace",
   "version": "0.0.1",
-  "description": "A starter for Medusa projects.",
+  "description": "A Medusa-based marketplace for Food Aid.",
   "author": "Medusa (https://medusajs.com)",
   "license": "MIT",
   "keywords": [
