feat: Add dynamic VENDOR_PANEL_URL support to STORE_CORS configuration

--- a/backend/.env.template
+++ b/backend/.env.template
@@ -2,6 +2,8 @@ STORE_CORS=http://localhost:8000,https://docs.medusajs.com
 ADMIN_CORS=http://localhost:5173,http://localhost:9000,https://docs.medusajs.com
 AUTH_CORS=http://localhost:5173,http://localhost:7000,http://localhost:9000,https://docs.medusajs.com
 VENDOR_CORS=http://localhost:7000,https://docs.medusajs.com
+# VENDOR_PANEL_URL will be automatically added to STORE_CORS if set
+# VENDOR_PANEL_URL=https://vendor.example.com
 # REDIS_URL=redis://localhost:6379 - only enable if having redis running locally
 JWT_SECRET=supersecret
 COOKIE_SECRET=supersecret
