--- a/backend/package.json
+++ b/backend/package.json
@@ -58,6 +58,7 @@
     "pg": "^8.13.0",
     "qrcode": "^1.5.4",
     "stripe": "^17.7.0",
+    "@stellar/stellar-sdk": "^13.1.0",
     "ulid": "^2.3.0",
     "zod": "^3.25.76"
   },
