vendor email fixes

--- a/backend/.env.template
+++ b/backend/.env.template
@@ -24,3 +24,7 @@ MEDUSA_ADMIN_PASSWORD=supersecret
 # Stripe Payment Configuration (Optional - enables Stripe Connect payments)
 # STRIPE_SECRET_API_KEY=sk_test_your_secret_key_here
 # STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret_here
+
+# Resend Email Configuration (Required for vendor acceptance emails)
+# RESEND_API_KEY=re_your_api_key_here
+# RESEND_FROM_EMAIL=onboarding@resend.dev # Use your verified domain email in production
