--- a/backend/.env.template
+++ b/backend/.env.template
@@ -5,6 +5,9 @@ VENDOR_CORS=http://localhost:7000,https://docs.medusajs.com
 # VENDOR_PANEL_URL will be automatically added to STORE_CORS if set
 # VENDOR_PANEL_URL=https://vendor.example.com
 # REDIS_URL=redis://localhost:6379 - only enable if having redis running locally
+
+# ⚠️  SECURITY WARNING: Change these secrets before deploying to production!
+# Generate secure secrets with: node -e "console.log(require('crypto').randomBytes(64).toString('hex'))"
 JWT_SECRET=supersecret
 COOKIE_SECRET=supersecret
 DATABASE_URL=postgres://postgres:postgres@localhost/mercurjs
