--- a/storefront/.env.template
+++ b/storefront/.env.template
@@ -2,6 +2,9 @@ MEDUSA_BACKEND_URL=
 NEXT_PUBLIC_MEDUSA_PUBLISHABLE_KEY=
 NEXT_PUBLIC_BASE_URL=
 NEXT_PUBLIC_DEFAULT_REGION=pl
+
+# ⚠️  SECURITY WARNING: Change these secrets before deploying to production!
+# Generate secure secrets with: node -e "console.log(require('crypto').randomBytes(32).toString('hex'))"
 NEXT_PUBLIC_STRIPE_KEY=supersecret
 REVALIDATE_SECRET=supersecret
 NEXT_PUBLIC_SITE_NAME="Black Market Coalition"
