feat(devops): comprehensive infrastructure improvements
- Security: Remove default JWT/Cookie secrets (throw in production)
- Deployment: Add healthcheck path/timeout to railway.json
- CI/CD: Add GitHub Actions workflow with lint, test, build, security audit
- Reliability: Add graceful shutdown handlers (SIGTERM/SIGINT)
- Backup: Add PostgreSQL backup script with S3 upload support
- Security: Add HSTS/CSP security headers middleware
- Observability: Add LOG_LEVEL env variable support
- Monitoring: Add Sentry error tracking integration
- Staging: Add staging environment config templates
- Docs: Comprehensive .env.template documentation

--- a/backend/.env.template
+++ b/backend/.env.template
@@ -1,33 +1,110 @@
-STORE_CORS=http://localhost:8000,https://docs.medusajs.com
-ADMIN_CORS=http://localhost:5173,http://localhost:9000,https://docs.medusajs.com
-AUTH_CORS=http://localhost:5173,http://localhost:7000,http://localhost:9000,https://docs.medusajs.com
-VENDOR_CORS=http://localhost:7000,https://docs.medusajs.com
-# VENDOR_PANEL_URL will be automatically added to STORE_CORS if set
-# VENDOR_PANEL_URL=https://vendor.example.com
-# REDIS_URL=redis://localhost:6379 - only enable if having redis running locally
+# =============================================================================
+# FreeBlackMarket.com Backend Environment Configuration
+# =============================================================================
+#
+# Copy this file to .env and fill in the values.
+# For production deployments, set these as environment variables in Railway.
+#
+# Documentation: https://docs.medusajs.com/learn/configurations/environment-variables
+# =============================================================================
 
-# ⚠️  SECURITY WARNING: Change these secrets before deploying to production!
-# Generate secure secrets with: node -e "console.log(require('crypto').randomBytes(64).toString('hex'))"
-JWT_SECRET=supersecret
-COOKIE_SECRET=supersecret
+# =============================================================================
+# 🔴 REQUIRED - Application will not start without these
+# =============================================================================
+
+# PostgreSQL Database Connection
+# Format: postgres://USER:PASSWORD@HOST:PORT/DATABASE
 DATABASE_URL=postgres://postgres:postgres@localhost/mercurjs
-MEDUSA_ADMIN_EMAIL=admin@yourmail.com
-MEDUSA_ADMIN_PASSWORD=supersecret
 
-# Algolia Configuration (Optional - enables automatic index creation and product syncing)
+# Security Secrets (CHANGE THESE IN PRODUCTION!)
+# Generate secure values with: node -e "console.log(require('crypto').randomBytes(64).toString('hex'))"
+# ⚠️  MUST be at least 32 characters. App will CRASH in production with default values!
+JWT_SECRET=dev-only-secret-change-in-production-32chars
+COOKIE_SECRET=dev-only-secret-change-in-production-32chars
+
+# =============================================================================
+# 🟡 CORS CONFIGURATION - Required for frontend access
+# =============================================================================
+
+# Storefront URLs (comma-separated, no trailing slashes)
+STORE_CORS=http://localhost:8000,https://docs.medusajs.com
+
+# Admin Panel URLs
+ADMIN_CORS=http://localhost:5173,http://localhost:9000,https://docs.medusajs.com
+
+# Vendor Panel URLs
+VENDOR_CORS=http://localhost:7000,https://docs.medusajs.com
+
+# Authentication URLs (usually includes all frontends)
+AUTH_CORS=http://localhost:5173,http://localhost:7000,http://localhost:9000,https://docs.medusajs.com
+
+# Vendor Panel URL (auto-added to STORE_CORS if set)
+# VENDOR_PANEL_URL=https://vendor.freeblackmarket.com
+
+# =============================================================================
+# 🟢 OPTIONAL - Services enabled when configured
+# =============================================================================
+
+# Redis (Event Bus, Workflow Engine, Rate Limiting)
+# Recommended for production. Falls back to in-memory if not set.
+# REDIS_URL=redis://localhost:6379
+
+# Stripe Payments
+# STRIPE_API_KEY=sk_test_your_secret_key_here
+# STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret_here
+
+# Resend Email Service (required for vendor acceptance emails)
+# RESEND_API_KEY=re_your_api_key_here
+# RESEND_FROM_EMAIL=onboarding@resend.dev
+
+# Algolia Search
 # ALGOLIA_APP_ID=your-application-id
 # ALGOLIA_API_KEY=your-admin-api-key
 
-# MinIO Storage Configuration (Optional - falls back to local storage)
+# MinIO Object Storage (falls back to local file storage)
 # MINIO_ENDPOINT=your-minio-endpoint
 # MINIO_ACCESS_KEY=your-access-key
 # MINIO_SECRET_KEY=your-secret-key
-# MINIO_BUCKET=custom-bucket-name # Optional - defaults to 'medusa-media'
+# MINIO_BUCKET=medusa-media
 
-# Stripe Payment Configuration (Optional - enables Stripe Connect payments)
-# STRIPE_SECRET_API_KEY=sk_test_your_secret_key_here
-# STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret_here
+# Stellar Blockchain (Hawala Settlement)
+# STELLAR_SECRET_KEY=Syour56characterstellarsecretkey
+# STELLAR_NETWORK=testnet
 
-# Resend Email Configuration (Required for vendor acceptance emails)
-# RESEND_API_KEY=re_your_api_key_here
-# RESEND_FROM_EMAIL=onboarding@resend.dev # Use your verified domain email in production
+# External Notification Services
+# ROCKETCHAT_URL=https://chat.example.com
+# APPRISE_API_URL=https://apprise.example.com/notify
+
+# =============================================================================
+# 📊 OBSERVABILITY - Monitoring & Debugging
+# =============================================================================
+
+# OpenTelemetry (distributed tracing)
+OTEL_ENABLED=false
+OTEL_SERVICE_NAME=freeblackmarket-backend
+# OTEL_EXPORTER_OTLP_ENDPOINT=http://localhost:4318
+
+# Sentry Error Tracking
+# SENTRY_DSN=https://key@sentry.io/project
+# SENTRY_ENVIRONMENT=development
+# SENTRY_SAMPLE_RATE=0.1
+
+# Logging Level: debug | info | warn | error
+LOG_LEVEL=debug
+
+# =============================================================================
+# 🚀 FEATURE FLAGS
+# =============================================================================
+
+ENABLE_STELLAR_SETTLEMENT=false
+ENABLE_STRIPE_ACH=false
+
+# =============================================================================
+# 🛠️  DEVELOPMENT ONLY
+# =============================================================================
+
+NODE_ENV=development
+PORT=9000
+MEDUSA_ADMIN_EMAIL=admin@yourmail.com
+MEDUSA_ADMIN_PASSWORD=supersecret
+
