feat(vendor-panel): add printful source to product import

--- a/backend/.env.template
+++ b/backend/.env.template
@@ -53,6 +53,11 @@ AUTH_CORS=http://localhost:5173,http://localhost:7000,http://localhost:9000,http
 # STRIPE_API_KEY=sk_test_your_secret_key_here
 # STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret_here
 
+# Printful (Print-on-Demand Fulfillment)
+# PRINTFUL_API_KEY=pf_your_api_key_here
+# PRINTFUL_WEBHOOK_SECRET=your_webhook_secret_here
+# PRINTFUL_STORE_ID=your_store_id_here
+
 # Email Service Configuration (choose ONE option below)
 
 # Option 1: SMTP Email (FREE - Gmail, Outlook, etc.)
