fix(printful): accept api key env aliases across backend

--- a/backend/.env.template
+++ b/backend/.env.template
@@ -55,6 +55,8 @@ AUTH_CORS=http://localhost:5173,http://localhost:7000,http://localhost:9000,http
 
 # Printful (Print-on-Demand Fulfillment)
 # PRINTFUL_API_KEY=pf_your_api_key_here
+# PRINTFUL_API_TOKEN=pf_your_api_key_here
+# PRINTFUL_TOKEN=pf_your_api_key_here
 # PRINTFUL_WEBHOOK_SECRET=your_webhook_secret_here
 # PRINTFUL_STORE_ID=your_store_id_here
 
