--- a/vendor-panel/package.json
+++ b/vendor-panel/package.json
@@ -4,7 +4,8 @@
   "pnpm": {
     "overrides": {
       "glob": ">=10.5.0",
-      "qs": ">=6.14.1"
+      "qs": ">=6.14.1",
+      "@medusajs/framework": "2.12.5"
     }
   },
   "scripts": {
@@ -21,7 +22,7 @@
     "i18n:schema": "node ./scripts/i18n/generate-schema.js",
     "lint": "eslint .  --ext ts,tsx --max-warnings 0",
     "format": "prettier --write .",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit -p tsconfig.build.json"
   },
   "main": "dist/app.js",
   "module": "dist/app.mjs",
