Fix Docker build for local file dependency install

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -5,6 +5,7 @@ WORKDIR /app
 RUN corepack enable && corepack prepare pnpm@9.15.9 --activate
 
 COPY package.json pnpm-lock.yaml ./
+COPY restaurant-marketplace ./restaurant-marketplace
 RUN pnpm install --frozen-lockfile
 
 COPY . .
