Fix MinIO connection parsing for Railway bucket access

--- a/backend/.env.staging.template
+++ b/backend/.env.staging.template
@@ -42,6 +42,16 @@ RESEND_FROM_EMAIL=staging@resend.dev
 ALGOLIA_APP_ID=your-staging-app-id
 ALGOLIA_API_KEY=your-staging-admin-key
 
+
+# MinIO Object Storage
+# MINIO_ENDPOINT=your-minio-endpoint
+# MINIO_PORT=443
+# MINIO_USE_SSL=true
+# MINIO_ACCESS_KEY=your-access-key
+# MINIO_SECRET_KEY=your-secret-key
+# MINIO_BUCKET=medusa-media
+# MINIO_PUBLIC_URL=https://bucket-staging-xxxx.up.railway.app
+
 # =============================================================================
 # OBSERVABILITY
 # =============================================================================
