--- a/backend/.env.template
+++ b/backend/.env.template
@@ -81,9 +81,12 @@ AUTH_CORS=http://localhost:5173,http://localhost:7000,http://localhost:9000,http
 
 # MinIO Object Storage (falls back to local file storage)
 # MINIO_ENDPOINT=your-minio-endpoint
+# MINIO_PORT=443
+# MINIO_USE_SSL=true
 # MINIO_ACCESS_KEY=your-access-key
 # MINIO_SECRET_KEY=your-secret-key
 # MINIO_BUCKET=medusa-media
+# MINIO_PUBLIC_URL=https://bucket-production-xxxx.up.railway.app
 
 # Stellar Blockchain (Hawala Settlement)
 # STELLAR_SECRET_KEY=Syour56characterstellarsecretkey
