--- a/storefront/.env.template
+++ b/storefront/.env.template
@@ -9,6 +9,7 @@ NEXT_PUBLIC_STRIPE_KEY=supersecret
 REVALIDATE_SECRET=supersecret
 NEXT_PUBLIC_SITE_NAME="Black Market Coalition"
 NEXT_PUBLIC_SITE_DESCRIPTION="Black Market Coalition"
-NEXT_PUBLIC_ALGOLIA_ID=supersecret
-NEXT_PUBLIC_ALGOLIA_SEARCH_KEY=supersecret
+# Algolia search credentials (required for storefront search + filters)
+NEXT_PUBLIC_ALGOLIA_ID=your_algolia_app_id
+NEXT_PUBLIC_ALGOLIA_SEARCH_KEY=your_algolia_search_key
 NEXT_PUBLIC_VENDOR_URL=https://vendor.freeblackmarket.com/
