ci: add non-blocking vendor panel typecheck step

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,6 +75,11 @@ jobs:
         working-directory: vendor-panel
         run: pnpm lint
 
+      - name: Typecheck vendor panel (non-blocking)
+        working-directory: vendor-panel
+        run: pnpm typecheck
+        continue-on-error: true
+
       - name: Build vendor panel preview
         working-directory: vendor-panel
         run: pnpm build:preview
