Align vendor-panel Vercel rewrites with Railway boilerplate

--- a/storefront/.env.template
+++ b/storefront/.env.template
@@ -12,4 +12,4 @@ NEXT_PUBLIC_SITE_DESCRIPTION="Black Market Coalition"
 # Algolia search credentials (required for storefront search + filters)
 NEXT_PUBLIC_ALGOLIA_ID=your_algolia_app_id
 NEXT_PUBLIC_ALGOLIA_SEARCH_KEY=your_algolia_search_key
-NEXT_PUBLIC_VENDOR_URL=https://vendor.freeblackmarket.com/
+NEXT_PUBLIC_VENDOR_URL=https://vendor.mercurjs.com
